2003-11-19  Alan Modra  <amodra@bigpond.net.au>

	* objdump.c: Wrap long lines, init vars separately from decl.
	(disassemble_section): Reset require_sec after call to
	find_symbol_for_address.

2003-11-14  Nick Clifton  <nickc@redhat.com>

	* objdump.c (find_symbol_for_address): Change parameters so
	that the entire disassemble_info structure is passed, not just
	a few fields.  Use the symbol_is_valid field to check the
	validity of located symbols and continue searching if they are
	not valid.
        (objdump_print_addr): Alter parameters passed to
	find_symbol_for_address.
        (objdump_symbol_at_address): Likewise.
        (disassemble_section): Likewise.  Also use symbol_is_valid
	function to check the validity of located symbols.

2003-11-13  Tobias Burnus  <tobias.burnus@physik.fu-berlin.de>

	* ar.c (open_inarch): Emit a warning when an archive is created
	(only shown with -v) in order to confrom to POSIX specification.

2003-11-11  Wang Li  <charles@linux.net.cn>

	* objcopy.c (wildcard): New variable.  True if wildcard pattern
	matching is allowed in symbol names.
	(strip_options): Add -w option to enable wildcard pattern
	matching.
	(copy_options): Likewise.
	(copy_usage): Mention new switch.
	(strip_usage): Likewise.
	(is_specified_symbol): If performing wildcard matches use fnmatch
	to compare symbol names with entries on the symbol list.
	(strip_main): Accept -w switch.
	(copy_main): Likewise.
	* Makefile.am: Add dependency on fnmatch.h for objcopy.c
	* Makefile.in: Regenerate.
	* doc/binutils.texi: Document new switch.
	* NEWS: Mention new switch.

2003-11-11  Alan Modra  <amodra@bigpond.net.au>

	* objdump.c: Revert rev 1.81 commit.

2003-11-10  Tobias Burnus <tobias.burnus@physik.fu-berlin.de>

	* ar.c (print_contents): Remove "member" from verbose output in
	order to conform to POSIX specification.

2003-11-10  Alan Modra  <amodra@bigpond.net.au>

	* README: Expand bug reporting information.
